ui/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ui
  name: ui
  namespace: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  strategy: {}
  template:
    metadata:
      labels:
        app: ui
    spec:
      # Pod wide security settings:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        # seems to succeed only when specific uid/guid is set
        runAsNonRoot: true
      containers:
        - image: northamerica-northeast1-docker.pkg.dev/node-microservices-demo/microservices-demo/ui:main-516cec6-1670455166
        name: ui
        # Container specific security settings:
        securityContext:
          # No new privs for process or it's children
          # https://github.com/kubernetes/design-proposals-archive/blob/main/auth/no-new-privs.md
          allowPrivilegeEscalation: false
          # TODO: npm checks for updates and writes a file
          # Explore disabling check or removing npm
          # readOnlyRootFilesystem: true
        resources:
          requests:
            cpu: 300m
            memory: 150Mi
status: {}
